--- a/pag005.html
+++ b/pag005.html
@@ -85,6 +85,8 @@
         }
     </style>
 
+    <link rel="shortcut icon" type="imagex/png" href="imagens/teste/mdf.ico">
+
 </head>
 <body>
     <div class="logo">
@@ -179,7 +181,7 @@
     <br>
     Faça sua reserva:
     <br>
-    <a href="https://wa.me/73998726764">CLIQUE AQUI</a>
+    <a href="https://wa.me/73998726764" target="_blank">CLIQUE AQUI</a>
     </div>
     <div class="pousadas">
         <a href="https://www.instagram.com/galeriaesuitescantodosol?igsh=MW5jeXkzenZycWh0ZA%3D%3D" target="_blank">
@@ -242,7 +244,7 @@
         <br>
         Faça sua reserva:
         <br>
-        <a href="https://wa.me/73998726764">CLIQUE AQUI</a>
+        <a href="https://wa.me/73998726764" target="_blank">CLIQUE AQUI</a>
         <br>
         </div>
     </div>
@@ -303,7 +305,7 @@
         <br>
         Faça sua reserva:
         <br>
-        <a href="https://wa.me/73999995044">CLIQUE AQUI</a>
+        <a href="https://wa.me/73999995044" target="_blank">CLIQUE AQUI</a>
         <br>
        </div>
 
@@ -314,39 +316,39 @@
     <br>
     <div>
         <h4>Patrocinador Oficial</h4>
-        <a href="https://www.instagram.com/cantodosolpraia/">
+        <a href="https://www.instagram.com/cantodosolpraia/" target="_blank">
         <img src="imagens/CANTO DO SOL PRAIA 1_page-0001.jpg" alt="Canto do Sol Praia Logo">
         </a>
         <br>
         <h4>Apoio</h4>
-        <a href="https://www.instagram.com/orglambada/"> 
+        <a href="https://www.instagram.com/orglambada/" target="_blank"> 
             <img src="imagens/apoio/organização internaciaonal de lambada.jpg" alt="">
         </a>
-        <a href="https://www.instagram.com/indyo.films/">
+        <a href="https://www.instagram.com/indyo.films/" target="_blank">
             <img src="imagens/apoio/Logo indyo normal fundo.jpg" alt="">
         </a>
-        <a href="https://www.instagram.com/zoukarmy/">
+        <a href="https://www.instagram.com/zoukarmy/" target="_blank">
             <img src="imagens/apoio/zouk army.png" alt="">
         </a>
-        <a href="https://www.instagram.com/chineloeareia/">
+        <a href="https://www.instagram.com/chineloeareia/" target="_blank">
             <img src="imagens/apoio/chinelo e areia_page-0001.jpg" alt=""> 
         </a>
-        <a href="https://www.instagram.com/camamu_adventure/">
+        <a href="https://www.instagram.com/camamu_adventure/" target="_blank">
             <img src="imagens/apoio/logo camamu adventure_page-0001.jpg" alt="">
         </a>
-        <a href="https://www.instagram.com/sectur_marau/">
+        <a href="https://www.instagram.com/sectur_marau/" target="_blank">
             <img src="imagens/apoio/secretaria do turismo.jpg" alt="">
         </a>
-        <a href="https://www.instagram.com/zoukforfa/">    
+        <a href="https://www.instagram.com/zoukforfa/" target="_blank">    
             <img src="imagens/apoio/zouk for fa.png" alt="">
         </a>
-        <a href="https://www.instagram.com/embrazouk/">
+        <a href="https://www.instagram.com/embrazouk/" target="_blank">
             <img src="imagens/apoio/LOGO EMBRAZOUK - FUNDO TRANSPARENTE.png" alt="">
         </a>
-        <a href="https://www.instagram.com/cantodosolpousada/">
+        <a href="https://www.instagram.com/cantodosolpousada/" target="_blank">
             <img src="imagens/apoio/apoio canto do sol.png" alt="">
         </a>
-        <a href="https://www.instagram.com/aguazulbarragrande/">
+        <a href="https://www.instagram.com/aguazulbarragrande/" target="_blank">
             <img src="imagens/apoio/Agua azul.jpeg" alt="">
         </a>
     </div>
