--- a/hospedagem_espanhol.html
+++ b/hospedagem_espanhol.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hospedagem</title>
+    <title>Hospedaje</title>
 
     <style>
         body{
@@ -84,6 +84,8 @@
             padding: 4px;
         }
     </style>
+
+    <link rel="shortcut icon" type="imagex/png" href="imagens/teste/mdf.ico">
 
 </head>
 <body>
@@ -179,7 +181,7 @@
     <br>
     Haz tu reserva:
     <br>
-    <a href="https://wa.me/73998726764">¡Haz clic aquí</a>
+    <a href="https://wa.me/73998726764" target="_blank">¡Haz clic aquí</a>
     </div>
     <div class="pousadas">
         <a href="https://www.instagram.com/galeriaesuitescantodosol?igsh=MW5jeXkzenZycWh0ZA%3D%3D" target="_blank">
@@ -243,7 +245,7 @@
         <br>
         Haga su reserva:
         <br>
-        <a href="https://wa.me/73998726764">¡Haz clic aquí</a>
+        <a href="https://wa.me/73998726764" target="_blank">¡Haz clic aquí</a>
         <br>
         </div>
     </div>
@@ -305,7 +307,7 @@
         <br>
         Haga su reserva:
         <br>
-        <a href="https://wa.me/73999995044">¡Haz clic aquí</a>
+        <a href="https://wa.me/73999995044" target="_blank">¡Haz clic aquí</a>
         <br>
        </div>
 
@@ -316,39 +318,39 @@
     <br>
     <div>
         <h4>Esponsor oficial</h4>
-        <a href="https://www.instagram.com/cantodosolpraia/">
+        <a href="https://www.instagram.com/cantodosolpraia/" target="_blank">
         <img src="imagens/CANTO DO SOL PRAIA 1_page-0001.jpg" alt="Canto do Sol Praia Logo">
         </a>
         <br>
         <h4>Apoyo</h4>
-        <a href="https://www.instagram.com/orglambada/"> 
+        <a href="https://www.instagram.com/orglambada/" target="_blank"> 
             <img src="imagens/apoio/organização internaciaonal de lambada.jpg" alt="">
         </a>
-        <a href="https://www.instagram.com/indyo.films/">
+        <a href="https://www.instagram.com/indyo.films/" target="_blank">
             <img src="imagens/apoio/Logo indyo normal fundo.jpg" alt="">
         </a>
-        <a href="https://www.instagram.com/zoukarmy/">
+        <a href="https://www.instagram.com/zoukarmy/" target="_blank">
             <img src="imagens/apoio/zouk army.png" alt="">
         </a>
-        <a href="https://www.instagram.com/chineloeareia/">
+        <a href="https://www.instagram.com/chineloeareia/" target="_blank">
             <img src="imagens/apoio/chinelo e areia_page-0001.jpg" alt=""> 
         </a>
-        <a href="https://www.instagram.com/camamu_adventure/">
+        <a href="https://www.instagram.com/camamu_adventure/" target="_blank">
             <img src="imagens/apoio/logo camamu adventure_page-0001.jpg" alt="">
         </a>
-        <a href="https://www.instagram.com/sectur_marau/">
+        <a href="https://www.instagram.com/sectur_marau/" target="_blank">
             <img src="imagens/apoio/secretaria do turismo.jpg" alt="">
         </a>
-        <a href="https://www.instagram.com/zoukforfa/">    
+        <a href="https://www.instagram.com/zoukforfa/" target="_blank">    
             <img src="imagens/apoio/zouk for fa.png" alt="">
         </a>
-        <a href="https://www.instagram.com/embrazouk/">
+        <a href="https://www.instagram.com/embrazouk/" target="_blank">
             <img src="imagens/apoio/LOGO EMBRAZOUK - FUNDO TRANSPARENTE.png" alt="">
         </a>
-        <a href="https://www.instagram.com/cantodosolpousada/">
+        <a href="https://www.instagram.com/cantodosolpousada/" target="_blank">
             <img src="imagens/apoio/apoio canto do sol.png" alt="">
         </a>
-        <a href="https://www.instagram.com/aguazulbarragrande/">
+        <a href="https://www.instagram.com/aguazulbarragrande/" target="_blank">
             <img src="imagens/apoio/Agua azul.jpeg" alt="">
         </a>
     </div>
