--- a/programacao_ingles.html
+++ b/programacao_ingles.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Schedule</title>
     <!--
     <style>
         main{
@@ -66,6 +66,9 @@
         }
 
     </style>
+
+    <link rel="shortcut icon" type="imagex/png" href="imagens/teste/mdf.ico">
+    
 </head>
 <body>
     <div>
