correção de paginas

--- a/como_chegar_espanho.html
+++ b/como_chegar_espanho.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     
-    <a href="index.html">INICIO</a>
+    <a href="inicial_espanhol.html">INICIO</a>
     <br>
     <br>
     <img src="imagens/teste/pagina em contrução em ESPANHOL.png" alt="">
