--- a/pacotes_ingles.html
+++ b/pacotes_ingles.html
@@ -74,7 +74,7 @@
         <img src="imagens/maraú02.png" alt="logo">
         </div>
         <nav>
-            <a href="index.html">HOME PAGE</a>
+            <a href="inicial_ingles.html">HOME PAGE</a>
             <a href="professores_ingles.html">ARTISTS</a>    
             <a href="programacao_ingles.html">SCHEDULE</a>
             <a href="hospedagem_ingles.html">ACCOMMODATION</a>
