--- a/hospedagem_espanhol.html
+++ b/hospedagem_espanhol.html
@@ -24,7 +24,7 @@
         .pousadas{
             text-align: center;
             display: inline-block;
-            padding: 40px;
+            padding: 32px;
             background-color: white;
             margin-inline: 10px;
             
@@ -341,6 +341,7 @@
         <a href="https://www.instagram.com/sectur_marau/" target="_blank">
             <img src="imagens/apoio/secretaria do turismo.jpg" alt="">
         </a>
+        <br>
         <a href="https://www.instagram.com/zoukforfa/" target="_blank">    
             <img src="imagens/apoio/zouk for fa.png" alt="">
         </a>
@@ -352,6 +353,9 @@
         </a>
         <a href="https://www.instagram.com/aguazulbarragrande/" target="_blank">
             <img src="imagens/apoio/Agua azul.jpeg" alt="">
+        </a>
+        <a href="https://www.instagram.com/movimento.lambazouk/" target="_blank">
+            <img src="imagens/apoio/Logo - Lambazouk (2)_page-0001.jpg" alt="">
         </a>
     </div>
     
