--- a/inicial_ingles.html
+++ b/inicial_ingles.html
@@ -89,6 +89,9 @@
 <a href="https://www.instagram.com/aguazulbarragrande/" target="_blank">
     <img src="imagens/apoio/Agua azul.jpeg" alt="">
 </a>
+<a href="https://www.instagram.com/movimento.lambazouk/" target="_blank">
+    <img src="imagens/apoio/Logo - Lambazouk (2)_page-0001.jpg" alt="">
+</a>
 
 </body>
 <footer>
