--- a/pacotes_espanhol.html
+++ b/pacotes_espanhol.html
@@ -27,9 +27,12 @@
             background-color: white;
         }
         h2{
-           color: yellow; 
+           color: white; 
         }
         h3{
+            color: yellow;
+        }
+        h5{
             color: yellow;
         }
         div {
@@ -89,15 +92,20 @@
     <br>
     <br>
 
-<h2>Full Pass - Earlybird R$ 530,00</h2>
+<h2>Full Pass  R$ 560,00</h2>
 <h3>02 Días de workshop + 4 Bailes -</h3>
-<h2>***Fiesta en barco no incluida***</h2>
+<h3>***Fiesta en barco no incluida***</h3>
+<br>
+<h2>01 Día de workshop  R$ 180,00</h2>
+<br>
+<h2>Paquetes de Bailes  R$ 300,00</h2>
+<h3>4 Bailes</h3>
 <br>
 <br>
-<h2>Full Pass + Fiesta en Barco - Earlybird R$ 690,00</h2>
+<h2>Full Pass + Fiesta en Barco R$ 710,00</h2>
 <br>
 <br>
-<h3>Disponible hasta el 14 de marzo de 2024</h3>
+<h3>Disponible hasta el 31 de Mayo de 2024</h3>
 <br>
 <a href="https://www.danceplace.com/li/nx/iMCIBlcVHR07cysp" target="_blank">
     <img src="imagens/teste/botao-comprar.jpg" alt="">
@@ -132,6 +140,7 @@
     <a href="https://www.instagram.com/sectur_marau/" target="_blank">
         <img src="imagens/apoio/secretaria do turismo.jpg" alt="">
     </a>
+    <br>
     <a href="https://www.instagram.com/zoukforfa/" target="_blank">    
         <img src="imagens/apoio/zouk for fa.png" alt="">
     </a>
@@ -143,6 +152,9 @@
     </a>
     <a href="https://www.instagram.com/aguazulbarragrande/" target="_blank">
         <img src="imagens/apoio/Agua azul.jpeg" alt="">
+    </a>
+    <a href="https://www.instagram.com/movimento.lambazouk/" target="_blank">
+        <img src="imagens/apoio/Logo - Lambazouk (2)_page-0001.jpg" alt="">
     </a>
 </div>
 
