--- a/pag002.html
+++ b/pag002.html
@@ -26,14 +26,14 @@
             color: rgb(245, 86, 46);
             background-color: white;
         }
-        h2{
+        h3{
            color: yellow; 
         }
-        h3{
-            color: yellow;
+        h2{
+            color: white;
         }
         h4{
-            color: rgb(245, 86, 46);
+            color: black;
         }
         h5{
             color: yellow;
@@ -106,17 +106,23 @@
     <br>
     <br>
 
-<h2>Full Pass - Earlybird R$ 530,00</h2>
+<h2>Full Pass  R$ 560,00</h2>
 <h3>02 Dias de workshop + 4 Bailes -</h3>
-<h2>***Não incluso o Boat Party***</h2>
+<h3>***Não incluso o Boat Party***</h3>
+<br>
+<h2>01 Dia de Workshop  R$ 180,00</h2>
+<br>
+<h2>Pacote de Bailes   R$ 300,00</h2>
+<h3>4 Bailes</h3>
 <br>
 <br>
-<h2>Full Pass + Boat Party - Earlybird R$ 690,00</h2>
+<h2>Full Pass + Boat Party  R$ 710,00</h2>
 <br>
 <br>
-<h3>Disponível até 14 de Março de 2024</h3>
+<h3>Disponível até 31 de Maio de 2024</h3>
 <br>
 <br>
+
 <br>
 
 <a href="https://www.danceplace.com/li/nx/iMCIBlcVHR07cysp" target="_blank">
@@ -151,6 +157,7 @@
     <a href="https://www.instagram.com/sectur_marau/" target="_blank">
         <img src="imagens/apoio/secretaria do turismo.jpg" alt="">
     </a>
+    <br>
     <a href="https://www.instagram.com/zoukforfa/" target="_blank">    
         <img src="imagens/apoio/zouk for fa.png" alt="">
     </a>
@@ -162,6 +169,9 @@
     </a>
     <a href="https://www.instagram.com/aguazulbarragrande/" target="_blank">
         <img src="imagens/apoio/Agua azul.jpeg" alt="">
+    </a>
+    <a href="https://www.instagram.com/movimento.lambazouk/" target="_blank">
+        <img src="imagens/apoio/Logo - Lambazouk (2)_page-0001.jpg" alt="">
     </a>
 </div>
 
