--- a/pag005.html
+++ b/pag005.html
@@ -83,6 +83,7 @@
         img{
             padding: 4px;
         }
+        
     </style>
 
     <link rel="shortcut icon" type="imagex/png" href="imagens/teste/mdf.ico">
@@ -314,7 +315,7 @@
     </h4>
     <br>
     <br>
-    <div>
+    <div class="poio">
         <h4>Patrocinador Oficial</h4>
         <a href="https://www.instagram.com/cantodosolpraia/" target="_blank">
         <img src="imagens/CANTO DO SOL PRAIA 1_page-0001.jpg" alt="Canto do Sol Praia Logo">
@@ -339,6 +340,7 @@
         <a href="https://www.instagram.com/sectur_marau/" target="_blank">
             <img src="imagens/apoio/secretaria do turismo.jpg" alt="">
         </a>
+        <br>
         <a href="https://www.instagram.com/zoukforfa/" target="_blank">    
             <img src="imagens/apoio/zouk for fa.png" alt="">
         </a>
@@ -350,6 +352,9 @@
         </a>
         <a href="https://www.instagram.com/aguazulbarragrande/" target="_blank">
             <img src="imagens/apoio/Agua azul.jpeg" alt="">
+        </a>
+        <a href="https://www.instagram.com/movimento.lambazouk/" target="_blank">
+            <img src="imagens/apoio/Logo - Lambazouk (2)_page-0001.jpg" alt="">
         </a>
     </div>
     
