--- a/professores_ingles.html
+++ b/professores_ingles.html
@@ -154,10 +154,11 @@
         <p>Feira de Santana/BA - Brazil</p>
     </div>
     <div>
-            <img src="imagens/professores/interrogação.png" alt="">
+        <a href="https://www.instagram.com/ricardo.ferrari.lamba/" target="_blank">
+            <img src="imagens/professores/Ricardo Ferrari e Larissa Vidal.jpg" alt="">
         </a>
-        <h3>Who will be???</h3>
-        <p>???????/?? - ?????</p>
+        <h3>Ricardo F e Larissa Vidal</h3>
+        <p>São Paulo/SP - Brazil</p>
     </div>
     <br>
     <div>
@@ -214,7 +215,7 @@
 <img src="imagens/CANTO DO SOL PRAIA 1_page-0001.jpg" alt="Canto do Sol Praia Logo">
 </a>
 <br>
-<h4>Support/h4>
+<h4>Support</h4>
 <a href="https://www.instagram.com/orglambada/" target="_blank"> 
     <img src="imagens/apoio/organização internaciaonal de lambada.jpg" alt="">
 </a>
@@ -233,6 +234,7 @@
 <a href="https://www.instagram.com/sectur_marau/" target="_blank">
     <img src="imagens/apoio/secretaria do turismo.jpg" alt="">
 </a>
+<br>
 <a href="https://www.instagram.com/zoukforfa/" target="_blank">    
     <img src="imagens/apoio/zouk for fa.png" alt="">
 </a>
@@ -244,6 +246,9 @@
 </a>
 <a href="https://www.instagram.com/aguazulbarragrande/" target="_blank">
     <img src="imagens/apoio/Agua azul.jpeg" alt="">
+</a>
+<a href="https://www.instagram.com/movimento.lambazouk/" target="_blank">
+    <img src="imagens/apoio/Logo - Lambazouk (2)_page-0001.jpg" alt="">
 </a>    
 </body>
 
