--- a/pacotes_ingles.html
+++ b/pacotes_ingles.html
@@ -27,9 +27,12 @@
             background-color: white;
         }
         h2{
-           color: yellow; 
+           color: white; 
         }
         h3{
+            color: yellow;
+        }
+        h5{
             color: yellow;
         }
         div {
@@ -89,14 +92,20 @@
     <br>
     <br>
 
-<h2>Full Pass - Earlybird R$ 530,00</h2>
+<h2>Full Pass R$ 560,00</h2>
 <h3>02 days of workshop + 4 dances</h3>
-<h2>***Boat Party not included***</h2>
+<h3>***Boat Party not included***</h3>
+<br>
+<h2>01 Day worhshop  R$ 180,00</h2>
+<br>
+<h2>Full Party R$ 300,00</h2>
+<h3>4 dances</h3>
 <br>
 <br>
-<h2>Full Pass + Boat Party - Earlybird R$ 690,00</h2>
+<h2>Full Pass + Boat Party  R$ 710,00</h2>
 <br>
 <br>
+<h3>Available until May 31, 2024</h3>
 <br>
 <br>
 <a href="https://www.danceplace.com/li/nx/iMCIBlcVHR07cysp" target="_blank">
@@ -132,6 +141,7 @@
     <a href="https://www.instagram.com/sectur_marau/" target="_blank">
         <img src="imagens/apoio/secretaria do turismo.jpg" alt="">
     </a>
+    <br>
     <a href="https://www.instagram.com/zoukforfa/" target="_blank">    
         <img src="imagens/apoio/zouk for fa.png" alt="">
     </a>
@@ -143,6 +153,9 @@
     </a>
     <a href="https://www.instagram.com/aguazulbarragrande/" target="_blank">
         <img src="imagens/apoio/Agua azul.jpeg" alt="">
+    </a>
+    <a href="https://www.instagram.com/movimento.lambazouk/" target="_blank">
+        <img src="imagens/apoio/Logo - Lambazouk (2)_page-0001.jpg" alt="">
     </a>
 </div>
 
