--- a/pag003.html
+++ b/pag003.html
@@ -207,6 +207,21 @@
     </div>
     <br>
     <br>
+    </div>
+    <br>
+    <br>
+    <h1>FOTOGRAFIA</h1>
+    <br>
+    <br>
+    <div>
+        <a href="https://www.instagram.com/thamyresvaladaresphotos/" target="_blank">
+        <img src="imagens/professores/fotografa.jpg" alt="">
+        </a>
+        <h3>Thamyres Valadares</h3>
+        <p>Espirito Santo - Brasil</p>
+    </div>
+    <br>
+    <br>
     <br>
     <br>
     
