--- a/professores_espanhol.html
+++ b/professores_espanhol.html
@@ -72,6 +72,9 @@
             margin-bottom: -17px;
             margin-left: 10px;
         }
+        .org{
+            margin:0;
+        }
 
         p {
             background-color: rgb(68, 185, 240);
@@ -227,6 +230,17 @@
         </a>
         <h3>Thamyres Valadares</h3>
         <p>Espirito Santo - Brasil</p>
+    </div>
+    <br>
+    <br>
+    <h1>ORGANIZACIÓN</h1>
+    <br>
+    <br>
+    <div>
+        <img src="imagens/professores/paty e ingrid.jpg" alt="">
+        </a>
+        <h3 class="org">Ingrid Araujo</h3>
+        <h3 class="org">Paty Lira</h3>
     </div>
     <br>
     <br>
