--- a/professores_ingles.html
+++ b/professores_ingles.html
@@ -61,6 +61,10 @@
             margin-bottom: -17px;
             margin-left: 10px;
         }
+        .org{
+            margin:0;
+        }
+
         p{
             background-color: rgb(68, 185, 240); 
             margin-left: 10px;
@@ -220,6 +224,17 @@
         </a>
         <h3>Thamyres Valadares</h3>
         <p>Espirito Santo - Brazil</p>
+    </div>
+    <br>
+    <br>
+    <h1>ORGANIZATION</h1>
+    <br>
+    <br>
+    <div>
+        <img src="imagens/professores/paty e ingrid.jpg" alt="">
+        </a>
+        <h3 class="org">Ingrid Araujo</h3>
+        <h3 class="org">Paty Lira</h3>
     </div>
     <br>
     <br>
