--- a/pag005.html
+++ b/pag005.html
@@ -29,6 +29,17 @@
             margin-inline: 10px;
             
         }
+        .pousadas_esgotada{
+            background-image: url(imagens/esgotado.jpeg);
+            background-repeat: no-repeat;
+            background-position: center;
+            text-align: center;
+            display: inline-block;
+            padding: auto;
+            background-color: white;
+            margin-inline: 10px;
+            
+        }
         div{
             text-align: center;
             margin: 10px;
@@ -48,6 +59,9 @@
         h4{
             color: black;
             text-align: center;
+        }
+        h5{
+            color: rgb(109, 5, 5);
         }
         p{
             color: black;
@@ -184,7 +198,7 @@
     <br>
     <a href="https://wa.me/73998726764" target="_blank">CLIQUE AQUI</a>
     </div>
-    <div class="pousadas">
+    <div class="pousadas_esgotada">
         <a href="https://www.instagram.com/galeriaesuitescantodosol?igsh=MW5jeXkzenZycWh0ZA%3D%3D" target="_blank">
             <img src="imagens/hospedagem/LOGO PRETO (004) - Copia.png" alt="">
         </a>   
@@ -237,15 +251,12 @@
         <br>
         <br>
         <br>
-        <br>
-        <br>
-        <br>
         Telefone: +55 (73) 99872-6764
         <br>
         <br>
         Faça sua reserva:
         <br>
-        <a href="https://wa.me/73998726764" target="_blank">CLIQUE AQUI</a>
+        <h5>ESGOTADO</h5>
         <br>
         </div>
     </div>
