--- a/hospedagem_ingles.html
+++ b/hospedagem_ingles.html
@@ -34,6 +34,17 @@
             margin: 10px;
             padding: 10px;
         }
+        .pousadas_esgotada{
+            background-image: url(imagens/sold\ out.png);
+            background-repeat: no-repeat;
+            background-position: center;
+            text-align: center;
+            display: inline-block;
+            padding: 32px;
+            background-color: white;
+            margin-inline: 10px;
+            
+        }
         h1{
             color: black;
             text-align: center;
@@ -48,6 +59,9 @@
         h4{
             color: black;
             text-align: center;
+        }
+        h5{
+            color: rgb(109, 5, 5);
         }
         p{
             color: black;
@@ -180,7 +194,7 @@
     <br>
     <a href="https://wa.me/73998726764" target="_blank">CLICK HERE</a>
     </div>
-    <div class="pousadas">
+    <div class="pousadas_esgotada">
         <a href="https://www.instagram.com/galeriaesuitescantodosol?igsh=MW5jeXkzenZycWh0ZA%3D%3D" target="_blank">
             <img src="imagens/hospedagem/LOGO PRETO (004) - Copia.png" alt="">
         </a>   
@@ -231,15 +245,12 @@
         <br>
         <br>
         <br>
-        <br>
-        <br>
-        <br>
         Telephone: +55 (73) 99872-6764
         <br>
         <br>
         Make your reservation:
         <br>
-        <a href="https://wa.me/73998726764" target="_blank">CLICK HERE</a>
+        <h5>SOLD OUT</h5>
         <br>
         </div>
     </div>
