--- a/como_chegar_espanho.html
+++ b/como_chegar_espanho.html
@@ -6,8 +6,8 @@
     <title>Como chegar</title>
 
     <style>
-         main{
-           min-width: 320;
+        main{
+            min-width: 320;
             max-width: 900; 
         }
         body{
@@ -22,7 +22,6 @@
         }
         nav > a{                    /*link do menu*/
             color: white;
-           
             padding: 10px; /*dist. dos links*/
             border-radius: 5px; /*arred. da borda*/
             text-decoration: none; /*tirar sublinhado*/ 
@@ -32,6 +31,9 @@
         nav > a:hover {             /*quando passa o mouse em cima*/
             background-color: var(--cor3);
             color: rgb(136, 208, 250);
+        }
+        img{
+            width: 100%;
         }
     </style>
 
@@ -51,9 +53,11 @@
             </nav>  
     <br>
     <br>
+    <div class="guia">
     <img src="imagens/guia/MDF_GUIA_01.png" alt="">
     <img src="imagens/guia/MDF_GUIA_02.png" alt="">
     <img src="imagens/guia/MDF_GUIA_03.png" alt="">
+    </div>
 </body>
 
 </html>
