--- a/como_chegar_ingles.html
+++ b/como_chegar_ingles.html
@@ -33,6 +33,9 @@
             background-color: var(--cor3);
             color: rgb(136, 208, 250);
         }
+        img {
+            width: 100%;
+        }    
     </style>
 
     <link rel="shortcut icon" type="imagex/png" href="imagens/teste/mdf.ico">
