--- a/pag006.html
+++ b/pag006.html
@@ -6,8 +6,8 @@
     <title>Como chegar</title>
 
     <style>
-         main{
-           min-width: 320;
+        main{
+            min-width: 320;
             max-width: 900; 
         }
         body{
@@ -22,7 +22,6 @@
         }
         nav > a{                    /*link do menu*/
             color: white;
-           
             padding: 10px; /*dist. dos links*/
             border-radius: 5px; /*arred. da borda*/
             text-decoration: none; /*tirar sublinhado*/ 
@@ -33,6 +32,9 @@
             background-color: var(--cor3);
             color: rgb(136, 208, 250);
         }
+        img{
+            width: 100%;
+        }    
     </style>
 
     <link rel="shortcut icon" type="imagex/png" href="imagens/teste/mdf.ico">
