--- a/pag002.html
+++ b/pag002.html
@@ -106,20 +106,20 @@
     <br>
     <br>
 
-<h2>Full Pass  R$ 580,00</h2>
+<h2>Full Pass  R$ 630,00</h2>
 <h3>02 Dias de workshop + 4 Bailes -</h3>
 <h3>***Não incluso o Boat Party***</h3>
 <br>
-<h2>01 Dia de Workshop  R$ 210,00</h2>
+<h2>01 Dia de Workshop  R$ 230,00</h2>
 <br>
-<h2>Pacote de Bailes   R$ 330,00</h2>
+<h2>Pacote de Bailes   R$ 350,00</h2>
 <h3>4 Bailes</h3>
 <br>
 <br>
-<h2>Full Pass + Boat Party  R$ 750,00</h2>
+<h2>Full Pass + Boat Party  R$ 800,00</h2>
 <br>
 <br>
-<h3>Disponível até 31 de Agosto de 2024</h3>
+<h3>Disponível até 30 de Novembro de 2024</h3>
 <br>
 <br>
 
