--- a/pacotes_espanhol.html
+++ b/pacotes_espanhol.html
@@ -92,20 +92,20 @@
     <br>
     <br>
 
-<h2>Full Pass  R$ 630,00</h2>
+<h2>Full Pass  R$ 660,00</h2>
 <h3>02 Días de workshop + 4 Bailes -</h3>
 <h3>***Fiesta en barco no incluida***</h3>
 <br>
-<h2>01 Día de workshop  R$ 230,00</h2>
+<h2>01 Día de workshop  R$ 250,00</h2>
 <br>
-<h2>Paquetes de Bailes  R$ 350,00</h2>
+<h2>Paquetes de Bailes  R$ 400,00</h2>
 <h3>4 Bailes</h3>
 <br>
 <br>
-<h2>Full Pass + Fiesta en Barco R$ 800,00</h2>
+<h2>Full Pass + Fiesta en Barco R$ 810,00</h2>
 <br>
 <br>
-<h3>Disponible hasta el 30 de Noviembre de 2024</h3>
+<h3>Disponible hasta el 28 de Enero de 2025</h3>
 <br>
 <a href="https://www.danceplace.com/li/nx/iMCIBlcVHR07cysp" target="_blank">
     <img src="imagens/teste/botao-comprar.jpg" alt="">
