--- a/pag005.html
+++ b/pag005.html
@@ -126,7 +126,7 @@
     
     <br>
 
-    <div class="pousadas">
+    <div class="pousadas_esgotada">
     <a href="https://www.instagram.com/cantodosolpousada?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">
         <img src="imagens/hospedagem/LOGO PRETO (004).png" alt="">
     </a>   
