--- a/como_chegar_espanho.html
+++ b/como_chegar_espanho.html
@@ -48,6 +48,7 @@
             <a href="inicial_espanhol.html">INICIO</a>
             <a href="professores_espanhol.html">ARTISTAS</a>    
             <a href="programacao_espanhol.html">PROGRAMACIÓN</a>
+            <a href="aulas_espanhol.html">CLASES</a>
             <a href="pacotes_espanhol.html">PAQUETES</a>
             <a href="hospedagem_espanhol.html">HOSPEDAJE</a>
             </nav>  
