--- a/pacotes_ingles.html
+++ b/pacotes_ingles.html
@@ -80,6 +80,7 @@
             <a href="inicial_ingles.html">HOME PAGE</a>
             <a href="professores_ingles.html">ARTISTS</a>    
             <a href="programacao_ingles.html">SCHEDULE</a>
+            <a href="aulas_ingles.html">CLASSES</a>
             <a href="hospedagem_ingles.html">ACCOMMODATION</a>
             <a href="como_chegar_ingles.html">HOW TO ACCESS</a>
             </nav>
