--- a/professores_ingles.html
+++ b/professores_ingles.html
@@ -87,6 +87,7 @@
     <nav>
         <a href="inicial_ingles.html">HOME PAGE</a>    
         <a href="programacao_ingles.html">PROGRAMMING</a>
+        <a href="aulas_ingles.html">CLASSES</a>
         <a href="pacotes_ingles.html">PACKAGES</a>
         <a href="hospedagem_ingles.html">ACCOMMODATION</a>
         <a href="como_chegar_ingles.html">HOW TO GET</a>
