--- a/programacao_ingles.html
+++ b/programacao_ingles.html
@@ -77,22 +77,33 @@
         <img src="imagens/maraú02.png" alt="logo">
         </div>
         <nav>
-            <a href="index.html">HOME PAGE</a>
-            <a href="pag003.html">ARTISTS</a>    
-            <a href="pag002.html">TICKETS</a>
-            <a href="pag005.html">ACCOMMODATION</a>
-            <a href="pag006.html">HOW TO GET</a>
+            <a href="inicial_ingles.html">HOME PAGE</a>
+            <a href="professores_ingles.html">ARTISTS</a>    
+            <a href="pacotes_ingles.html">TICKETS</a>
+            <a href="aulas_ingles.html">CLASSES</a>
+            <a href="hospedagem_ingles.html">ACCOMMODATION</a>
+            <a href="como_chegar_ingles.html">HOW TO GET</a>
             </nav>
-    <br>
-    <br>
-    <h1>
-        PROGRAMMING:
-    </h1>
     <br>
     <br>
     <div class="imagem">
         <br>
+        <img src="imagens/programação/01_geral.jpg" alt="">
+        </div>
+        <br>
+        <br>
+        <br>
+        <div class="imagem">
+        <img src="imagens/programação/02_quinta.jpg" alt="">
+        </div>
+        <div class="imagem">
         <img src="imagens/programação/01_MDF_Baile de abertura.png" alt="">
+        </div>
+        <br>
+        <br>
+        <br>
+        <div class="imagem">
+        <img src="imagens/programação/03_sexta.jpg" alt="">
         </div>
         <div class="imagem">
         <img src="imagens/programação/02_MDF_Baile Rosa e Azul.png" alt="">
@@ -101,13 +112,20 @@
         <br>
         <br>
         <div class="imagem">
+        <img src="imagens/programação/04_sabado.jpg" alt="">
+        </div>
+        <div class="imagem">
         <img src="imagens/programação/03_MDF_Baile Tropical.png" alt="">
+        </div>
+        <br>
+        <br>
+        <br>
+        <div class="imagem">
+        <img src="imagens/programação/05_domingo.jpg" alt="">
         </div>
         <div class="imagem">
         <img src="imagens/programação/04_MDF_Baile Noite do Branco.png" alt="">
         </div>
-        <br>
-        <br>
         <div class="imagem">
         <img src="imagens/programação/MDF_Festa no Barco.png" alt="">
         </div>
