--- a/hospedagem_espanhol.html
+++ b/hospedagem_espanhol.html
@@ -110,6 +110,7 @@
         <a href="inicial_espanhol.html">INICIO</a>
         <a href="professores_espanhol.html">ARTISTAS</a>    
         <a href="programacao_espanhol.html">PROGRAMACIÓN</a>
+        <a href="aulas_espanhol.html">CLASES</a>
         <a href="pacotes_espanhol.html">PAQUETES</a>
         <a href="como_chegar_espanho.html">CÓMO LLEGAR</a>
         </nav>
