--- a/hospedagem_ingles.html
+++ b/hospedagem_ingles.html
@@ -110,6 +110,7 @@
         <a href="inicial_ingles.html">HOME PAGE</a>
         <a href="professores_ingles.html">ARTISTS</a>    
         <a href="programacao_ingles.html">SCHEDULE</a>
+        <a href="aulas_ingles.html">CLASSES</a>
         <a href="pacotes_ingles.html">TICKETS</a>
         <a href="como_chegar_ingles.html">HOW TO ACCESS</a>
         </nav>
