--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 <nav>
 <a href="pag003.html">ARTISTAS</a>    
 <a href="pag004.html">PROGRAMAÇÃO</a>
+<a href="pag007.html">AULAS</a>
 <a href="pag002.html">PACOTES</a>
 <a href="pag005.html">HOSPEDAGEM</a>
 <a href="pag006.html">COMO CHEGAR</a>
