--- a/inicial_espanhol.html
+++ b/inicial_espanhol.html
@@ -27,6 +27,7 @@
 <nav>
 <a href="professores_espanhol.html">ARTISTAS</a>    
 <a href="programacao_espanhol.html">PROGRAMACIÓN</a>
+<a href="aulas_espanhol.html">CLASES</a>
 <a href="pacotes_espanhol.html">PAQUETES</a>
 <a href="hospedagem_espanhol.html">HOSPEDAJE</a>
 <a href="como_chegar_espanho.html">CÓMO LLEGAR</a>
