--- a/inicial_ingles.html
+++ b/inicial_ingles.html
@@ -27,6 +27,7 @@
 <nav>
 <a href="professores_ingles.html">ARTISTS</a>    
 <a href="programacao_ingles.html">SCHEDULE</a>
+<a href="aulas_ingles.html">CLASSES</a>
 <a href="pacotes_ingles.html">TICKETS</a>
 <a href="hospedagem_ingles.html">ACCOMMODATION</a>
 <a href="como_chegar_ingles.html">HOW TO ACCESS</a>
