--- a/pag003.html
+++ b/pag003.html
@@ -86,6 +86,7 @@
     <nav>
         <a href="index.html">PAGINA INICIAL</a>    
         <a href="pag004.html">PROGRAMAÇÃO</a>
+        <a href="pag007.html">AULAS</a>
         <a href="pag002.html">PACOTES</a>
         <a href="pag005.html">HOSPEDAGEM</a>
         <a href="pag006.html">COMO CHEGAR</a>
