--- a/pag006.html
+++ b/pag006.html
@@ -48,6 +48,7 @@
             <a href="index.html">PAGINA INICIAL</a>
             <a href="pag003.html">ARTISTAS</a>    
             <a href="pag004.html">PROGRAMAÇÃO</a>
+            <a href="pag007.html">AULAS</a>
             <a href="pag002.html">PACOTES</a>
             <a href="pag005.html">HOSPEDAGEM</a>
             </nav>  
