--- a/programacao_espanhol.html
+++ b/programacao_espanhol.html
@@ -78,38 +78,55 @@
         <img src="imagens/maraú02.png" alt="logo">
         </div>
         <nav>
-            <a href="index.html">INICIO</a>
-            <a href="pag003.html">ARTISTAS</a>    
-            <a href="pag002.html">PAQUETES</a>
-            <a href="pag005.html">HOSPEDAJE</a>
-            <a href="pag006.html">CÓMO LLEGAR</a>
+            <a href="inicial_espanhol.html">INICIO</a>
+            <a href="professores_espanhol.html">ARTISTAS</a> 
+            <a href="aulas_espanhol.html">CLASES</a>   
+            <a href="pacotes_espanhol.html">PAQUETES</a>
+            <a href="hospedagem_espanhol.html">HOSPEDAJE</a>
+            <a href="como_chegar_espanho.html">CÓMO LLEGAR</a>
             </nav>
     <br>
     <br>
-    <h1>
-        PROGRAMACIÓN:
-    </h1>
-    <br>
-    <br>
-    <nav>
+    <div class="imagem">
+        <br>
+        <img src="imagens/programação/01_geral.jpg" alt="">
+        </div>
+        <br>
+        <br>
+        <br>
         <div class="imagem">
-            <br>
-            <img src="imagens/programação/01_MDF_Baile de abertura.png" alt="">
-            </div>
-            <div class="imagem">
-            <img src="imagens/programação/02_MDF_Baile Rosa e Azul.png" alt="">
-            </div>
-            <br>
-            <br>
-            <br>
-            <div class="imagem">
-            <img src="imagens/programação/03_MDF_Baile Tropical.png" alt="">
-            </div>
-            <div class="imagem">
-            <img src="imagens/programação/04_MDF_Baile Noite do Branco.png" alt="">
-            </div>
-            <br>
-            <br>
+        <img src="imagens/programação/02_quinta.jpg" alt="">
+        </div>
+        <div class="imagem">
+        <img src="imagens/programação/01_MDF_Baile de abertura.png" alt="">
+        </div>
+        <br>
+        <br>
+        <br>
+        <div class="imagem">
+        <img src="imagens/programação/03_sexta.jpg" alt="">
+        </div>
+        <div class="imagem">
+        <img src="imagens/programação/02_MDF_Baile Rosa e Azul.png" alt="">
+        </div>
+        <br>
+        <br>
+        <br>
+        <div class="imagem">
+        <img src="imagens/programação/04_sabado.jpg" alt="">
+        </div>
+        <div class="imagem">
+        <img src="imagens/programação/03_MDF_Baile Tropical.png" alt="">
+        </div>
+        <br>
+        <br>
+        <br>
+        <div class="imagem">
+        <img src="imagens/programação/05_domingo.jpg" alt="">
+        </div>
+        <div class="imagem">
+        <img src="imagens/programação/04_MDF_Baile Noite do Branco.png" alt="">
+        </div>
             <div class="imagem">
             <img src="imagens/programação/MDF_Festa no Barco.png" alt="">
             </div>
