--- a/pag004.html
+++ b/pag004.html
@@ -156,7 +156,7 @@
         Data: 02/02 <br>
         Local de embarque: Píer de Barra Grande. <br>
         Embarque 10:00h <br>
-        saída : 10:30h <br>
+        Saída : 10:30h <br>
         Retorno : 16:30h <br>
         <br>
         Vamos juntos criar memórias inesquecíveis no coração de Maraú ⚓🛳
