--- a/index.html
+++ b/index.html
@@ -25,14 +25,19 @@
 </div>
 
 <nav>
+<!--    
 <a href="pag003.html">ARTISTAS</a>    
 <a href="pag004.html">PROGRAMAÇÃO</a>
 <a href="pag007.html">AULAS</a>
+-->
 <a href="pag002.html">PACOTES</a>
+<!--
 <a href="pag005.html">HOSPEDAGEM</a>
 <a href="pag006.html">COMO CHEGAR</a>
+-->
 </nav>    
-<h1>O início de uma nova era...30/01/2025 á 02/02/2025</h1>
+<h1>O início de uma nova era nos trouxe até aqui…</h1> 
+<h1>Agora, é hora de fazer história!...29/01/2026 á 01/02/2026</h1>    
 <h2>Muito sol, muita Lambada e Zouk Brasileiro em um Paraiso Tropical !!!!
     Venha para o MARAÚ DANCE FESTIVAL  </h3>
 <br>
