--- a/inicial_espanhol.html
+++ b/inicial_espanhol.html
@@ -25,14 +25,19 @@
 </div>
 
 <nav>
+<!--    
 <a href="professores_espanhol.html">ARTISTAS</a>    
 <a href="programacao_espanhol.html">PROGRAMACIÓN</a>
 <a href="aulas_espanhol.html">CLASES</a>
+-->
 <a href="pacotes_espanhol.html">PAQUETES</a>
+<!--
 <a href="hospedagem_espanhol.html">HOSPEDAJE</a>
 <a href="como_chegar_espanho.html">CÓMO LLEGAR</a>
+-->
 </nav>    
-<h1>El comienzo de una nueva era...30/01/2025 al 02/02/2025</h1>
+<h1>El comienzo de una nueva era nos ha traído aquí!!!</h1>
+<h1>Ahora es el momento de hacer historia...29/01/2026 á 01/02/2026</h1>
 <h2>¡¡¡Mucho sol, mucha Lambada y Zouk brasileño en un paraíso tropical!!!!
     Ven al MARAÚ DANCE FESTIVAL  </h3>
 <br>
