--- a/inicial_ingles.html
+++ b/inicial_ingles.html
@@ -25,14 +25,19 @@
 </div>
 
 <nav>
+<!--    
 <a href="professores_ingles.html">ARTISTS</a>    
 <a href="programacao_ingles.html">SCHEDULE</a>
 <a href="aulas_ingles.html">CLASSES</a>
+-->
 <a href="pacotes_ingles.html">TICKETS</a>
+<!--
 <a href="hospedagem_ingles.html">ACCOMMODATION</a>
 <a href="como_chegar_ingles.html">HOW TO ACCESS</a>
+-->
 </nav>    
-<h1>The beginning of a new era...01/30/2025 to 02/02/2025</h1>
+<h1>The beginning of a new era has brought us here!!!</h1>
+<h1>Now it's time to make history...01/29/2026 to 02/01/2026</h1>
 <h2>The perfect heat to dance a lot of Lambada and Brazilian Zouk in a Tropical Paradise!!!! Come to MARAÚ DANCE FESTIVAL  </h3>
 <br>
 <br>
