--- a/pacotes_ingles.html
+++ b/pacotes_ingles.html
@@ -78,22 +78,25 @@
         </div>
         <nav>
             <a href="inicial_ingles.html">HOME PAGE</a>
+            <!--
             <a href="professores_ingles.html">ARTISTS</a>    
             <a href="programacao_ingles.html">SCHEDULE</a>
             <a href="aulas_ingles.html">CLASSES</a>
             <a href="hospedagem_ingles.html">ACCOMMODATION</a>
             <a href="como_chegar_ingles.html">HOW TO ACCESS</a>
+            -->
             </nav>
     <br>
     <br>
-    <h1>MARAU DANCE FESTIVAL 2025 TICKETS</h1>
+    <h1>MARAU DANCE FESTIVAL 2026 TICKETS</h1>
     <br>
     <br>
     <br>
     <br>
     <br>
 
-<h2>Full Pass R$ 660,00</h2>
+<h2>EARLYBIRD ** Full Pass + Boat Party R$ 650,00</h2>
+<!--
 <h3>02 days of workshop + 4 dances</h3>
 <h3>***Boat Party not included***</h3>
 <br>
@@ -107,9 +110,11 @@
 <br>
 <br>
 <h3>Available until January 28, 2025</h3>
+-->
 <br>
 <br>
-<a href="https://www.danceplace.com/li/nx/iMCIBlcVHR07cysp" target="_blank">
+
+<a href="https://www.danceplace.com/ticket/buy/14734?fbclid=PAZXh0bgNhZW0CMTEAAaYh8cBwQ29qT9aeTynibKBFtLo6EuLJokeODxF3eEEfT1cCEca8thVDW-Q_aem_RHLFy8r9T4__7EMQiZsCcg" target="_blank">
     <img src="imagens/teste/buy now.png" alt="">
 </a>
 <br>
