--- a/pacotes_espanhol.html
+++ b/pacotes_espanhol.html
@@ -78,22 +78,25 @@
         </div>
         <nav>
             <a href="inicial_espanhol.html">INICIO</a>
+            <!--
             <a href="professores_espanhol.html">ARTISTAS</a>    
             <a href="programacao_espanhol.html">PROGRAMACIÓN</a>
             <a href="aulas_espanhol.html">CLASES</a>
             <a href="hospedagem_espanhol.html">HOSPEDAJE</a>
             <a href="como_chegar_espanho.html">CÓMO LLEGAR</a>
+            -->
             </nav>
     <br>
     <br>
-    <h1>PAQUETES MARAÚ DANCE FESTIVAL 2025</h1>
+    <h1>PAQUETES MARAÚ DANCE FESTIVAL 2026</h1>
     <br>
     <br>
     <br>
     <br>
     <br>
 
-<h2>Full Pass  R$ 660,00</h2>
+<h2>EARLYBIRD ** Full Pass + Boat Party  R$ 650,00</h2>
+<!--
 <h3>02 Días de workshop + 4 Bailes -</h3>
 <h3>***Fiesta en barco no incluida***</h3>
 <br>
@@ -107,8 +110,10 @@
 <br>
 <br>
 <h3>Disponible hasta el 28 de Enero de 2025</h3>
+-->
 <br>
-<a href="https://www.danceplace.com/li/nx/iMCIBlcVHR07cysp" target="_blank">
+<br>
+<a href="https://www.danceplace.com/ticket/buy/14734?fbclid=PAZXh0bgNhZW0CMTEAAaYh8cBwQ29qT9aeTynibKBFtLo6EuLJokeODxF3eEEfT1cCEca8thVDW-Q_aem_RHLFy8r9T4__7EMQiZsCcg" target="_blank">
     <img src="imagens/teste/botao-comprar.jpg" alt="">
 </a>
 <br>
