--- a/pag002.html
+++ b/pag002.html
@@ -92,22 +92,25 @@
         </div>
         <nav>
             <a href="index.html">PAGINA INICIAL</a>
+            <!--
             <a href="pag003.html">ARTISTAS</a>    
             <a href="pag004.html">PROGRAMAÇÃO</a>
             <a href="pag007.html">AULAS</a>
             <a href="pag005.html">HOSPEDAGEM</a>
             <a href="pag006.html">COMO CHEGAR</a>
+            -->
             </nav>
     <br>
     <br>
-    <h1>PACOTES MARAU DANCE FESTIVAL 2025</h1>
+    <h1>PACOTES MARAU DANCE FESTIVAL 2026</h1>
     <br>
     <br>
     <br>
     <br>
     <br>
 
-<h2>Full Pass  R$ 660,00</h2>
+<h2>LOTE NO ESCURO ** Full Pass + Boat Party  R$ 650,00</h2>
+<!--
 <h3>02 Dias de workshop + 4 Bailes -</h3>
 <h3>***Não incluso o Boat Party***</h3>
 <br>
@@ -123,10 +126,10 @@
 <h3>Disponível até 28 de Janeiro de 2025</h3>
 <br>
 <br>
-
+-->
 <br>
 
-<a href="https://www.danceplace.com/li/nx/iMCIBlcVHR07cysp" target="_blank">
+<a href="https://www.danceplace.com/ticket/buy/14734?fbclid=PAZXh0bgNhZW0CMTEAAaYh8cBwQ29qT9aeTynibKBFtLo6EuLJokeODxF3eEEfT1cCEca8thVDW-Q_aem_RHLFy8r9T4__7EMQiZsCcg" target="_blank">
     <img src="imagens/teste/botao-comprar.jpg" alt="">
 </a>
 <br>
