--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 
     <link rel="shortcut icon" type="imagex/png" href="imagens/teste/mdf.ico">
 
+    <style>
+        video{
+            width: 30%;
+        }
+    </style>
+
 </head>
     
 <body>
@@ -43,8 +49,9 @@
 <br>
 <br>
 <video controls>
-    <source src="video/marau-h_R0DmUppH.mp4" type="video/mp4">
+    <source src="video/VideoMarauDanceFestival2026 II.mp4" type="video/mp4">
 </video>
+
 <h4>
     <img src="imagens/teste/local evento marcação.png" alt="">
     Rua Vasco Neto, nº 09 - Barra Grande - Maraú - Bahia - Brasil - Cep.: 45520-000</h4>
