--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 <a href="pag005.html">HOSPEDAGEM</a>
 <a href="pag006.html">COMO CHEGAR</a>
 -->
+<a href="pag008.html">GALERIA</a>
 </nav>    
 <h1>O início de uma nova era nos trouxe até aqui…</h1> 
 <h1>Agora, é hora de fazer história!...29/01/2026 á 01/02/2026</h1>    
@@ -48,10 +49,12 @@
     Venha para o MARAÚ DANCE FESTIVAL  </h3>
 <br>
 <br>
+<!--
 <video controls>
     <source src="video/VideoMarauDanceFestival2026 IV.mp4" type="video/mp4">
 </video>
-
+-->
+<img src="imagens/flyer/Lote Escuro 2026.png" alt="">
 <h4>
     <img src="imagens/teste/local evento marcação.png" alt="">
     Rua Vasco Neto, nº 09 - Barra Grande - Maraú - Bahia - Brasil - Cep.: 45520-000</h4>
