--- a/pacotes_ingles.html
+++ b/pacotes_ingles.html
@@ -85,6 +85,7 @@
             <a href="hospedagem_ingles.html">ACCOMMODATION</a>
             <a href="como_chegar_ingles.html">HOW TO ACCESS</a>
             -->
+            <a href="galeria_ingles.html">GALLERY</a>
             </nav>
     <br>
     <br>
