--- a/pag002.html
+++ b/pag002.html
@@ -99,7 +99,8 @@
             <a href="pag005.html">HOSPEDAGEM</a>
             <a href="pag006.html">COMO CHEGAR</a>
             -->
-            </nav>
+            <a href="pag008.html">GALERIA</a>
+        </nav>
     <br>
     <br>
     <h1>PACOTES MARAU DANCE FESTIVAL 2026</h1>
