--- a/inicial_ingles.html
+++ b/inicial_ingles.html
@@ -35,15 +35,19 @@
 <a href="hospedagem_ingles.html">ACCOMMODATION</a>
 <a href="como_chegar_ingles.html">HOW TO ACCESS</a>
 -->
+<a href="galeria_ingles.html">GALLERY</a>
 </nav>    
 <h1>The beginning of a new era has brought us here!!!</h1>
 <h1>Now it's time to make history...01/29/2026 to 02/01/2026</h1>
 <h2>The perfect heat to dance a lot of Lambada and Brazilian Zouk in a Tropical Paradise!!!! Come to MARAÚ DANCE FESTIVAL  </h3>
 <br>
 <br>
+<!--
 <video controls>
     <source src="video/VideoMarauDanceFestival2026 IV.mp4" type="video/mp4">
 </video>
+-->
+<img src="imagens/flyer/Lote Escuro 2026.png" alt="">
 <h4>
     <img src="imagens/teste/local evento marcação.png" alt="">
     Rua Vasco Neto, nº 09 - Barra Grande - Maraú - Bahia - Brasil - Cep.: 45520-000</h4>
