--- a/inicial_espanhol.html
+++ b/inicial_espanhol.html
@@ -40,7 +40,7 @@
 <h1>El comienzo de una nueva era nos ha traído aquí!!!</h1>
 <h1>Ahora es el momento de hacer historia...29/01/2026 á 01/02/2026</h1>
 <h2>¡¡¡Mucho sol, mucha Lambada y Zouk brasileño en un paraíso tropical!!!!
-    Ven al MARAÚ DANCE FESTIVAL  </h3>
+    Ven al MARAÚ DANCE FESTIVAL.  </h3>
 <br>
 <br>
 <!--
