--- a/inicial_ingles.html
+++ b/inicial_ingles.html
@@ -39,7 +39,7 @@
 </nav>    
 <h1>The beginning of a new era has brought us here!!!</h1>
 <h1>Now it's time to make history...01/29/2026 to 02/01/2026</h1>
-<h2>The perfect heat to dance a lot of Lambada and Brazilian Zouk in a Tropical Paradise!!!! Come to MARAÚ DANCE FESTIVAL  </h3>
+<h2>The perfect heat to dance a lot of Lambada and Brazilian Zouk in a Tropical Paradise!!!! Come to MARAÚ DANCE FESTIVAL.  </h3>
 <br>
 <br>
 <!--
