--- a/pag008.html
+++ b/pag008.html
@@ -119,8 +119,7 @@
     <br>
     <br>
     <div>
-        <video controls>
-            <source src="video/video01.mp4" type="video/mp4">
+        <video src="video/video01.mp4" type="video/mp4" controls>
         </video>
     </div>
     <div>
