--- a/pag008.html
+++ b/pag008.html
@@ -119,7 +119,10 @@
     <br>
     <br>
     <div>
-        <video src="video/video01.mp4" type="video/mp4" controls>
+        <video src="video/video01.mp4" type="video/mp4" controls autoplay muted>  
+        <!-- se colocar o comando os dois comando abaixo após o controls o video inicia automatico ao abrir o site
+         autoplay
+         muted   -->
         </video>
     </div>
     <div>
