--- a/pag008.html
+++ b/pag008.html
@@ -119,25 +119,23 @@
     <br>
     <br>
     <div>
-        <video src="video/video01.mp4" type="video/mp4" controls autoplay muted>  
-        <!-- se colocar o comando os dois comando abaixo após o controls o video inicia automatico ao abrir o site
-         autoplay
-         muted   -->
+        <video controls>  
+        <source src="video/video01.mp4" type="video/mp4" >
         </video>
     </div>
     <div>
         <video controls>
-            <source src="video/video02.mp4" type="video/mp4">
+        <source src="video/video02.mp4" type="video/mp4">
         </video>
     </div>
     <div>
         <video controls>
-            <source src="video/video03.mp4" type="video/mp4">
+        <source src="video/video03.mp4" type="video/mp4">
         </video>
     </div>
     <div>
         <video controls>
-            <source src="video/video04.mp4" type="video/mp4">
+        <source src="video/video04.mp4" type="video/mp4">
         </video>
     </div>
     <br>
